--- a/table.html
+++ b/table.html
@@ -15,8 +15,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td rowspan="6" class="first"><strong>Hours</strong></td>
+        <tr class="first">
+          <td rowspan="6"><strong>Hours</strong></td>
           <td><strong>Mon</strong></td>
           <td><strong>Tue</strong></td>
           <td><strong>Wed</strong></td>
